--- a/css/index_style.css
+++ b/css/index_style.css
@@ -83,7 +83,7 @@
     }
     .greeting {
         justify-content: center;
-        background-image: url("/img/dust.png");
+        background-image: url("./img/dust.png");
         background-repeat: no-repeat;
         background-position: center;
         align-content: flex-start;
