--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ dd {
     background-color: white;
     color: black;
     border: 2px solid rgb(0, 0, 0);
-    box-shadow: 0 0 25px rgba(255, 255, 255, 0.5);
+    transition: 0.2s;
     border-radius: 10px;
     margin: 3%;
     padding: 55px 1%;
@@ -208,6 +208,10 @@ dd {
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
+}
+.planets__card:hover {
+    box-shadow: 0 0 25px rgba(255, 255, 255, 0.5);
+    transition: 0.2s;
 }
 .social_networks {
     width: 30%;
